--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
   network_mode: "host"
   devices:
   - "/dev/ttyACM0:/dev/ttyACM0"
-  command: "opendlv-device-stm32-lynx --cid=219 --cidGpio=220 --freq=30 -id=1 --device=/dev/ttyACM0 --verbose"
+  command: "opendlv-device-stm32-lynx --cid=219 --cidGpio=220 --cidpwm=222 --freq=30 -id=1 --device=/dev/ttyACM0 --verbose"
   
